<resources>
    <string name="app_name">Carmaix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_senha">Senha</string>
    <string name="lbl_sair">Sair</string>
    <string name="btn_logar">Entrar</string>
    <string name="carregando">Carregando...</string>
    <string name="errorMessage500">Houve uma falha interna no servidor</string>
    <string name="loadingEmpty">Aguarde...</string>
    <string name="emptyValues">Não existem itens disponíveis</string>
    <string name="errorServer">Algo de errado aconteceu. Tente novamente.</string>
    <string name="tab_title_nao_avaliados">não avaliados</string>
    <string name="tab_title_avaliados">avaliados</string>
    <string name="tab_title_com_proposta">com proposta</string>
    <string name="tab_title_em_estoque">em estoque</string>
    <string name="tab_title_vendidos">vendidos</string>
    <string name="header_id">#</string>
    <string name="header_data">data</string>
    <string name="header_marca_modelo">marca/modelo</string>
    <string name="header_nome">nome</string>
    <string name="header_placa">placa</string>
    <string name="header_ano">ano</string>
    <string name="header_classe">classe</string>
    <string name="header_avaliacao">avaliacao</string>
    <string name="header_opc">opc</string>
    <string name="icone_buscar">buscar</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="sair_menu">Sair</string>
    <string name="nao_avaliados">Não avaliados</string>
    <string name="avaliados">Avaliados</string>
    <string name="com_proposta">Com proposta</string>
    <string name="em_estoque">Em estoque</string>
    <string name="vendidos">Vendidos</string>
    <string name="opcoes">Opções</string>
    <string name="tabela_passecarros">Tabela Passecarros</string>
    <string name="avaliacao">avaliação: %s</string>
    <string name="marca">marca: %s</string>
    <string name="modelo">modelo: %s</string>
    <string name="placa">placa: %s</string>
    <string name="visualizar">Visualizar</string>
    <string name="avaliar">Avaliar</string>
    <string name="revalidar">Revalidar</string>
    <string name="selecione_uma_opcao">Selecione uma opção</string>
    <string name="exibindo_resultados">Exibindo resultados para: %s</string>
    <string name="veiculo_cliente">VEÍCULO E CLIENTE</string>
    <string name="opcionais">OPCIONAIS</string>
    <string name="mecanica">MÊCANICA</string>
    <string name="fotos">FOTOS</string>
    <string name="estatistica_preco">ESTATÍSTICA E PREÇO</string>
    <string name="label_data_e_hora">Data e Hora:</string>
    <string name="label_vendedor">Vendedor:</string>
    <string name="label_cliente">Cliente:</string>
    <string name="label_categoria">Categoria:</string>
    <string name="label_chassi">Chassi:</string>
    <string name="label_situacao">Situação:</string>
    <string name="label_marca">Marca:</string>
    <string name="label_ano_fabricacao">Ano Fabricação:</string>
    <string name="label_combustivel">Combustível:</string>
    <string name="label_portas">Portas:</string>
    <string name="label_cor">Cor:</string>
    <string name="label_classificacao">Classificação:</string>
    <string name="label_veiculo_comprado">Veículo Comprado:</string>
    <string name="label_avaliador">Avaliador:</string>
    <string name="label_empresa">Empresa:</string>
    <string name="label_telefone">Telefone:</string>
    <string name="label_placa">Placa:</string>
    <string name="label_renavam">Renavam:</string>
    <string name="label_uf">UF:</string>
    <string name="label_cidade">Cidade:</string>
    <string name="label_modelo">Modelo:</string>
    <string name="label_ano_modelo">Ano Modelo:</string>
    <string name="label_acessorio">Acessório:</string>
    <string name="label_motivo_avaliacao">Motivo Avaliação:</string>
    <string name="label_km">KM:</string>
    <string name="label_nota">Nota:</string>
    <string name="label_garantia_de_fabrica">Garantia de Fábrica:</string>
    <string name="radio_atacado">Atacado</string>
    <string name="radio_varejo">Varejo</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="value_default_vendedor">Selecione um vendedor</string>
    <string name="value_default_categoria">Selecione uma categoria</string>
    <string name="value_default_combustivel">Selecione o combustível</string>
    <string name="value_default_portas">Portas</string>
    <string name="value_default_classificacao">Classificação</string>
    <string name="value_default_acessorios">Selecione os acessórios</string>
    <string name="value_default_motivo_avaliacao">Selecione o motivo da avaliação</string>
    <string name="value_default_nota">Nota</string>
    <string name="value_default_uf">UF</string>
    <string name="value_default_marcas_categoria">Escolha a Marca</string>
    <string name="value_default_modelos_marca">Escolha um modelo</string>
    <string name="value_default_ano_fabricacao">Selecione o ano de fabricação</string>
    <string name="value_default_ano_modelo">Selecione o ano do modelo</string>
    <string name="value_default_cidade">Escolha a cidade</string>
    <string name="value_default_dialog_passecarros_combustivel">Escolha o Combustível</string>
    <string name="value_default_dialog_passecarros_ano">Escolha o Ano</string>
    <string name="check_abs_tras">Abs. Tras.</string>
    <string name="check_airbag_mot">Airbag Mot.</string>
    <string name="check_airbag_lateral">Airbag Lateral</string>
    <string name="check_alarme">Alarme</string>
    <string name="check_alarme_orig">Alarme Orig.</string>
    <string name="check_ar_condicionado">Ar Condicionado</string>
    <string name="check_ar_cond_digital">Ar Cond. Digital</string>
    <string name="check_ar_quente">Ar Quente</string>
    <string name="check_barra_no_teto">Barra no Teto</string>
    <string name="check_bco_couro">Bco. Couro</string>
    <string name="check_cambio_aut">Câmbio Aut.</string>
    <string name="check_capota_maritima">Capota Marítima</string>
    <string name="check_chave_code">Chave Code</string>
    <string name="check_dir_hidraulica">Dir. Hidráulica</string>
    <string name="check_dir_eletrica">Dir. Elétrica</string>
    <string name="check_desemb_traseiro">Desemb. Traseiro</string>
    <string name="check_farois_neblina">Farois Neblina</string>
    <string name="check_rodas_liga_orig"> Rodas Liga Orig.</string>
    <string name="check_rodas_liga_esp">Rodas Liga Esp.</string>
    <string name="check_limpador_tras">Limpador Tras.</string>
    <string name="check_gnv">GNV</string>
    <string name="check_prot_cacamba">Prot. Caçamba</string>
    <string name="check_retrovisor_eletr">Retrovisor Elétr.</string>
    <string name="check_santo_antonio">Santo Antônio</string>
    <string name="check_teto_solar_eletr">Teto Solar Elétr.</string>
    <string name="check_trava_eletr">Trava Elétr.</string>
    <string name="check_vidros_eletr_dian">Vidros Elétr. Dian.</string>
    <string name="check_vidros_eletr_tras">Vidros Elétr. Tras.</string>
    <string name="check_cd">CD</string>
    <string name="check_cd_orig">CD Orig.</string>
    <string name="check_cd_mp3">CD/MP3</string>
    <string name="check_tracao_4_4">Tração 4x4</string>
    <string name="check_airbag_duplo">Airbag Duplo</string>
    <string name="check_xenon_orig">Xenon Orig.</string>
    <string name="check_xenon">Xenon</string>
    <string name="check_sensor_est">Sensor Est.</string>
    <string name="check_sensor_crep">Sensor Crep.</string>
    <string name="check_sensor_chuva">Sensor Chuva</string>
    <string name="column_opcionais">Opcionais</string>
    <string name="column_items">Items</string>
    <string name="check_extintor">Extintor</string>
    <string name="check_triangulo">Triângulo </string>
    <string name="check_macaco">Macaco</string>
    <string name="check_chave_de_rodas">Chave de Rodas</string>
    <string name="check_estepe">Estepe</string>
    <string name="check_calotas">Calotas</string>
    <string name="check_antena">Antena</string>
    <string name="check_acendedor">Acendedor</string>
    <string name="check_tapetes">Tapetes</string>
    <string name="check_manual_de_garantia">Manual de Garantia</string>
    <string name="check_manual_do_prop">Manual do Prop.</string>
    <string name="check_cartao_transponder">Cartão Transponder</string>
    <string name="check_chave_reserva">Chave Reserva</string>
    <string name="label_aro">Aro:</string>
    <string name="radio_motor">Motor</string>
    <string name="radio_cambio">Câmbio</string>
    <string name="radio_embragem">Embreagem</string>
    <string name="radio_freios">Freios</string>
    <string name="radio_suspensao_diant">Suspensão Diant.</string>
    <string name="radio_suspensao_tras">Suspensão Tras.</string>
    <string name="radio_caixa_direcao">Caixa de Direção</string>
    <string name="radio_escapamento">Escapamento</string>
    <string name="radio_homocinetica">Homocinética</string>
    <string name="radio_rolamentos">Rolamentos</string>
    <string name="radio_pneu_diant">Pneus Diant.</string>
    <string name="radio_pneus_tras">Pneus Tras.</string>
    <string name="radio_diferencial_carda">Diferencial/Cardã</string>
    <string name="radio_lataria">Lataria</string>
    <string name="radio_pintura">Pintura</string>
    <string name="radio_carroceria">Carroceria</string>
    <string name="radio_porta_malas">Porta-malas</string>
    <string name="radio_comp_motor">Comp. motor</string>
    <string name="radio_para_choque_d">Para-choque D.</string>
    <string name="radio_para_choque_t">Para-choque T</string>
    <string name="radio_parabrisa">Parabrisa</string>
    <string name="radio_estofamento">Estofamento</string>
    <string name="radio_farol_lanterna">Farol/Lanterna</string>
    <string name="check_colisao_pequeno">Pequeno</string>
    <string name="check_colisao_medio">Médio</string>
    <string name="check_colisao_grande">Grande</string>
    <string name="check_colisao_nao">Não</string>
    <string name="check_colisao_repintura">Repintura</string>
    <string name="label_observacoes">Observações:</string>
    <string name="label_observacoes_adicionais">Observações adicionais:</string>
    <string name="label_valor">Valor(R$):</string>
    <string name="label_reparos">Reparos:</string>
    <string name="label_dialog_titulo">Título</string>
    <string name="label_dialog_valor">Valor</string>
    <string name="label_dialog_opc">Opc.</string>
    <string name="label_dialog_martelinho">Martelinho</string>
    <string name="label_dialog_martelinho_valor">160,00</string>
    <string name="label_dialog_pintar_porta">Pintar porta</string>
    <string name="label_dialog_pintar_porta_valor">300,00</string>
    <string name="label_dialog_pneus_13">Pneus 13</string>
    <string name="label_dialog_pneus_13_valor">150,00</string>
    <string name="label_dialog_pneus_r15">Pneus R15</string>
    <string name="label_dialog_pneus_r15_valor">300,00</string>
    <string name="label_dialog_confirmar">Confirmar</string>
    <string name="label_dialog_cancelar">Cancelar</string>
    <string name="label_image_frente">Frente:</string>
    <string name="label_image_traseira">Traseira:</string>
    <string name="label_image_lateral_e">Lateral E.:</string>
    <string name="label_image_lateral_d">Lateral D.:</string>
    <string name="label_image_interior">Interior:</string>
    <string name="label_image_odometro">Odometro:</string>
    <string name="label_image_pneu">Pneu:</string>
    <string name="label_image_detalhe">Detalhe:</string>
    <string name="label_image_estepe">Estepe:</string>
    <string name="label_image_documento">Documento:</string>
    <string name="label_image_enviar">Enviar Imagem</string>
</resources>