<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/item1" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nao_avaliados"
            android:title="@string/nao_avaliados"
            android:icon="@drawable/square_cinza"
        />
    </group>
    <group android:id="@+id/item2" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_avaliados"
            android:title="@string/avaliados"
            android:icon="@drawable/square_vermelho"
        />
    </group>
    <group android:id="@+id/item3" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_com_proposta"
            android:title="@string/com_proposta"
            android:icon="@drawable/square_laranja"
        />
    </group>
    <group android:id="@+id/item4" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_em_estoque"
            android:title="@string/em_estoque"
            android:icon="@drawable/square_verde"
        />
    </group>
    <group android:id="@+id/item5" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_vendidos"
            android:title="@string/vendidos"
            android:icon="@drawable/square_roxo"
        />
    </group>

    <group android:id="@+id/asdsad" android:checkableBehavior="single">
        <item android:title="@string/opcoes">
            <menu>
                <item
                    android:id="@+id/menu_tabela_passecarros"
                    android:icon="@drawable/ic_tab_black_48dp"
                    android:title="@string/tabela_passecarros" />
                <item
                    android:id="@+id/menu_alterar_senha"
                    android:icon="@drawable/ic_lock_black_48dp"
                    android:title="@string/alterar_senha" />
                <item
                    android:id="@+id/menu_sair"
                    android:icon="@drawable/ic_exit_to_app_black_48dp"
                    android:title="@string/sair_menu" />
            </menu>
        </item>
    </group>
</menu>
