<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
>
    <TextView
        android:text="@string/header_id"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="11dp"
    />

    <TextView
        android:text="@string/header_data"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textSize="11dp"
    />

    <TextView
        android:text="@string/header_marca_modelo"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:textSize="11dp"
    />

    <TextView
        android:text="@string/header_nome"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:textSize="11dp"
    />

    <TextView
        android:text="@string/header_placa"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textAlignment="center"
        android:textSize="11dp"
        />

    <TextView
        android:text="@string/header_ano"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textAlignment="center"
        android:textSize="11dp"
        />

    <TextView
        android:text="@string/header_classe"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textSize="11dp"
        />

    <TextView
        android:text="@string/header_avaliacao"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:textSize="11dp"
        android:textAlignment="center"
        />

    <TextView
        android:text="@string/header_opc"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="10dp"
        />
</LinearLayout>
